--- a/src/css/chatpage.css
+++ b/src/css/chatpage.css
@@ -87,7 +87,7 @@ body {
   }
 }
 #frame #sidepanel #profile .wrap img {
-  width: 50px;
+  width: 5rem;
   border-radius: 50%;
   padding: 3px;
   border: 2px solid #e74c3c;
